--- a/book/spanish/content/appa.html
+++ b/book/spanish/content/appa.html
@@ -1,5 +1,5 @@
 <section data-type="appendix" id="coding_tips">
-<h1>Consejos de programacion</h1>
+<h1 class="chapterhead">Consejos de programacion</h1>
 
 <p class="lede">Programar <a contenteditable="false" data-primary="coding tips" data-type="indexterm" id="ctappa">&nbsp;</a>es un tipo de escritura. Como todos los tipos de escritura, programar tiene reglas espec&#xed;ficas. Para comparar, mencionaremos r&#xe1;pidamente algunas de las reglas del espa&#xf1;ol a las que probablemente no les has puesto atenci&#xf3;n porque te son naturales.</p>
 
@@ -32,7 +32,7 @@ background(51 102, 153); // &#161;Error! Falta una coma</pre>
 <pre data-code-language="p5js" data-type="programlisting">
 background(51, 102, 153) // Falta el punto y coma, no hay problema.</pre>
 
-<p>El computador no perdona ni la menor omisi&#xf3;n o desviaci&#xf3;n de lo esperado. Si recuerdas estos consejos, cometer&#xe1;s menos errores. Pero si te equivocas al escribir, como nos ocurre a todos, no es un problema. Tu navegador te alertar&#xe1; sobre el problema, y cuando est&#xe9; corregido, el programa se ejecutar&#xe1; <a contenteditable="false" data-primary="coding tips" data-secondary="functions and parameters" data-startref="ctaafp" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="parameters" data-startref="pappa" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="functions" data-startref="fappa" data-type="indexterm">&nbsp;</a>correctamente.</p>
+<p>El computador no perdona ni la menor omisi&#xf3;n o desviaci&#xf3;n de lo esperado. Si recuerdas estos consejos, cometer&#xe1;s menos errores. Pero si te equivocas al escribir, como nos ocurre a todos, no es un problema. Tu navegador te alertar&#xe1; sobre el problema, y cuando est&#xe9; corregido, el programa se ejecutar&#xe1; <a contenteditable="false" data-primary="coding tips" data-secondary="functions and parameters" data-startref="ctaafp" data-type="indexterm"></a><a contenteditable="false" data-primary="parameters" data-startref="pappa" data-type="indexterm"></a><a contenteditable="false" data-primary="functions" data-startref="fappa" data-type="indexterm"></a>correctamente.</p>
 </section>
 
 <section data-type="sect1" id="comments-id1">
