--- a/book/spanish/content/appb.html
+++ b/book/spanish/content/appb.html
@@ -1,5 +1,5 @@
 <section data-type="appendix" id="order_of_operations">
-<h1>Orden de operaciones</h1>
+<h1 class="chapterhead">Orden de operaciones</h1>
 
 <p class="lede">Cuando <a contenteditable="false" data-primary="order of operations" data-type="indexterm">&nbsp;</a>se realizan c&#xE1;lculos matem&#xE1;ticos en un programa, cada operaci&#xF3;n ocurre de acuerdo a un orden predeterminado. Este <em>orden de operaciones</em> asegura que el c&#xF3;digo se comporte de la misma manera cada vez que se ejecute. Esto no es muy distinto que en aritm&#xE9;tica o &#xE1;lgebra, no obstante en la programaci&#xF3;n existen operadores que son menos conocidos.</p>
 
@@ -80,7 +80,7 @@
 			<p><code>if (a == b)</code></p>
 			</td>
 		</tr>
-		<tr>
+		<tr class="largerTr">
 			<td>
 			<p>AND l&#xF3;gico</p>
 			</td>
@@ -91,7 +91,7 @@
 			<p><code>if (mouseIsPressed &amp;&amp; (a &gt; b))</code></p>
 			</td>
 		</tr>
-		<tr>
+		<tr class="largerTr">
 			<td>
 			<p>OR l&#xF3;gico</p>
 			</td>
@@ -102,7 +102,7 @@
 			<p><code>if (mouseIsPressed || (a &gt; b))</code></p>
 			</td>
 		</tr>
-		<tr>
+		<tr class="largerTr">
 			<td>
 			<p>Asignaci&#xF3;n</p>
 			</td>
