--- a/book/spanish/content/appc.html
+++ b/book/spanish/content/appc.html
@@ -1,5 +1,5 @@
 <section data-type="appendix" id="variable_scope">
-<h1>&#xc1;mbito de variable</h1>
+<h1 class="chapterhead">&#xc1;mbito de variable</h1>
 
 <p class="lede">La <a contenteditable="false" data-primary="variable scope rule" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="rule of variable scope" data-type="indexterm">&nbsp;</a>regla del &#xE1;mbito de variable se define simplemente como: una variable creada dentro de un bloque (c&#xF3;digo dentro de llaves: <code>{</code> y <code>}</code>) solamente existe dentro de ese bloque.</p>
 
