--- a/book/spanish/content/ch04-variables.html
+++ b/book/spanish/content/ch04-variables.html
@@ -290,7 +290,7 @@ for (inic; prueba; refresco) {
 <figcaption><b>Figura 4-1. </b>Diagrama de flujo de un bucle for</figcaption>
 </figure>
 
-<p>La instrucci&#xF3;n <em>prueba</em> requiere m&#xE1;s explicaci&#xF3;n. Siempre es una <em>expresi&#xF3;n de relaci&#xF3;n</em> que compara dos valores con un <a contenteditable="false" data-primary="relational operators" data-type="indexterm">&nbsp;</a><em>operador relacional</em>. En este ejemplo, la expresi&#xF3;n es "i &lt; 400" y el operador es el s&#xED;mbolo &lt; (menor que). Los operadores relacionales m&#xE1;s comunes<a contenteditable="false" data-primary="!= (not equal to) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="&lt;= (less than or equal to) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="&gt;= (greater than or equal to) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="&gt; (greater than) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="== (equal to) operator" data-type="indexterm">&nbsp;</a>son:<a contenteditable="false" data-primary="&lt; (less than) operator" data-type="indexterm">&nbsp;</a></p>
+<p>La instrucci&#xF3;n <em>prueba</em> requiere m&#xE1;s explicaci&#xF3;n. Siempre es una <em>expresi&#xF3;n de relaci&#xF3;n</em> que compara dos valores con un <a contenteditable="false" data-primary="relational operators" data-type="indexterm">&nbsp;</a><em>operador relacional</em>. En este ejemplo, la expresi&#xF3;n es "i &lt; 400" y el operador es el s&#xED;mbolo &lt; (menor que). Los operadores relacionales m&#xE1;s comunes<a contenteditable="false" data-primary="!= (not equal to) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="&lt;= (less than or equal to) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="&gt;= (greater than or equal to) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="&gt; (greater than) operator" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="== (equal to) operator" data-type="indexterm"></a>son:<a contenteditable="false" data-primary="&lt; (less than) operator" data-type="indexterm">&nbsp;</a></p>
 
 <table>
 	<tbody>
@@ -362,7 +362,9 @@ function setup() {
   createCanvas(480, 120);
   strokeWeight(2);
 }
-
+<!--Page Break--><br class="page-break-after" />
+<!--Page Break--><br class="page-break-after" />
+<!--Page Break--><br class="page-break-after" />
 function draw() {
   background(204);
   for (var i = 20; i &lt; 400; i += 8) {
@@ -525,7 +527,7 @@ function draw() {
     }
   }
 }</pre>
-<a contenteditable="false" data-primary="variables" data-secondary="and repetition" data-secondary-sortas="repetition" data-startref="v4rep" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="repetition" data-seealso="for loops" data-startref="rep4" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="for loops" data-startref="fl4" data-type="indexterm">&nbsp;</a></section>
+<a contenteditable="false" data-primary="variables" data-secondary="and repetition" data-secondary-sortas="repetition" data-startref="v4rep" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="repetition" data-seealso="for loops" data-startref="rep4" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="for loops" data-startref="fl4" data-type="indexterm"></a></section>
 </section>
 
 <section data-type="sect1" id="robot2">
@@ -540,29 +542,29 @@ function draw() {
 <table class="smallerText">
 	<tbody>
 		<tr>
-			<td>
-			<pre class="pre">
+			<td class="largerTd">
+			<pre class="pre smallerText">
 y = 390&nbsp;
 bodyHeight = 180&nbsp;
 neckHeight = 40
 </pre>
 			</td>
-			<td>
-			<pre>
+			<td class="largerTd">
+			<pre class="pre smallerText">
 y = 460&nbsp;
 bodyHeight = 260&nbsp;
 neckHeight = 95
 </pre>
 			</td>
-			<td>
-			<pre>
+			<td class="largerTd">
+			<pre class="pre smallerText">
 y = 310&nbsp;
 bodyHeight = 80&nbsp;
 neckHeight = 10
 </pre>
 			</td>
-			<td>
-			<pre>
+			<td class="largerTd">
+			<pre class="pre smallerText">
 y = 420&nbsp;
 bodyHeight = 110&nbsp;
 neckHeight = 140
