--- a/book/spanish/content/ch06-translate.html
+++ b/book/spanish/content/ch06-translate.html
@@ -61,7 +61,7 @@ function draw() {
 
 <p>Los valores para la funci&#xF3;n&nbsp;<code>translate()</code>&nbsp;se suman. El rect&#xE1;ngulo peque&#xF1;o es trasladado seg&#xFA;n&nbsp;<code>mouseX</code>&nbsp;+ 35 y&nbsp;<code>mouseY</code>&nbsp;+ 10. Las coordenadas <em>x</em> e <em>y</em> de ambos rect&#xE1;ngulos son (0,0), pero las funciones <code>translate()</code> los mueven a otras posiciones en el lienzo.</p>
 
-<p>Sin embargo, incluso cuando las transformaciones se acumulan dentro del bloque&nbsp;<code>draw()</code>&nbsp;&nbsp;,se anulan cada vez que la funci&#xF3;n <a contenteditable="false" data-primary="translate() function" data-startref="tf6" data-type="indexterm">&nbsp;</a>time&nbsp;<code>draw()</code>&nbsp;se ejecuta nuevamente desde el <a contenteditable="false" data-primary="translating locations" data-startref="tl6" data-type="indexterm">&nbsp;</a>principio.</p>
+<p>Sin embargo, incluso cuando las transformaciones se acumulan dentro del bloque&nbsp;<code>draw()</code>, se anulan cada vez que la funci&#xF3;n <a contenteditable="false" data-primary="translate() function" data-startref="tf6" data-type="indexterm"></a>time&nbsp;<code>draw()</code>&nbsp;se ejecuta nuevamente desde el <a contenteditable="false" data-primary="translating locations" data-startref="tl6" data-type="indexterm"></a>principio.</p>
 </section>
 </section>
 
