--- a/book/spanish/content/ch08-motion.html
+++ b/book/spanish/content/ch08-motion.html
@@ -115,7 +115,7 @@ function draw() {
 <section data-type="sect2" id="ex-8-5">
 <h2>Ejemplo 8-5: rebota contra la pared</h2>
 
-<p>En este <a contenteditable="false" data-primary="animation" data-secondary="bouncing shapes off wall" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="shapes" data-secondary="bouncing off wall" data-type="indexterm">&nbsp;</a>ejemplo, extenderemos el <a data-type="xref" href="#ex-8-3">#ej-8-3</a> para que la figura cambie de direcci&#xF3;n cuando llegue a un borde, en vez de volver a aparecer por la izquierda. Para lograr esto, a&#xF1;adimos una nueva variable para almacenar la direcci&#xF3;n de la figura. Un valor de direcci&#xF3;n de 1 mueve la figura hacia la derecha, mientras que un valor de -1 la mueve hacia la izquierda:</p>
+<p>En este <a contenteditable="false" data-primary="animation" data-secondary="bouncing shapes off wall" data-type="indexterm"></a><a contenteditable="false" data-primary="shapes" data-secondary="bouncing off wall" data-type="indexterm"></a>ejemplo, extenderemos el <a data-type="xref" href="#ex-8-3">#ej-8-3</a> para que la figura cambie de direcci&#xF3;n cuando llegue a un borde, en vez de volver a aparecer por la izquierda. Para lograr esto, a&#xF1;adimos una nueva variable para almacenar la direcci&#xF3;n de la figura. Un valor de direcci&#xF3;n de 1 mueve la figura hacia la derecha, mientras que un valor de -1 la mueve hacia la izquierda:</p>
 
 <figure><img alt="Ex 08 05" src="images/gspj_08in04.png" />
 <figcaption/>
@@ -325,7 +325,7 @@ function draw() {
 <section data-type="sect1">
 <h1>Circular</h1>
 
-<p>Si <a contenteditable="false" data-primary="animation" data-secondary="circular motion" data-type="indexterm" id="a8cm">&nbsp;</a><a contenteditable="false" data-primary="circular motion" data-type="indexterm" id="cm8">&nbsp;</a>eres un as de la trigonometr&#xED;a, ya sabes cu&#xE1;n incre&#xED;bles son las funciones <em>seno</em> y <em>coseno</em>. Si no lo eres, esperamos que los siguientes ejemplos pueden gatillar tu inter&#xE9;s. No discutiremos aqu&#xED; los detalles matem&#xE1;ticos, pero s&#xED; mostraremos unas pocas aplicaciones para generar movimiento fluido.</p>
+<p>Si <a contenteditable="false" data-primary="animation" data-secondary="circular motion" data-type="indexterm" id="a8cm"></a><a contenteditable="false" data-primary="circular motion" data-type="indexterm" id="cm8"></a>eres un as de la trigonometr&#xED;a, ya sabes cu&#xE1;n incre&#xED;bles son las funciones <em>seno</em> y <em>coseno</em>. Si no lo eres, esperamos que los siguientes ejemplos pueden gatillar tu inter&#xE9;s. No discutiremos aqu&#xED; los detalles matem&#xE1;ticos, pero s&#xED; mostraremos unas pocas aplicaciones para generar movimiento fluido.</p>
 
 <p>La <a data-type="xref" href="#Fig_08_02">Figura 8-2</a> muestra una visualizaci&#xF3;n de valores de la onda sinusoidal y c&#xF3;mo se relacionan con &#xE1;ngulos. En la parte superior e inferior de la onda, observa c&#xF3;mo la tasa de cambio (el cambio en el eje vertical) desacelera, se detiene y luego cambia de direcci&#xF3;n. Es esta cualidad de la curva lo que genera un movimiento interesante.</p>
 
@@ -466,7 +466,7 @@ function setup() {
   ellipseMode(RADIUS);
   background(204);
 }
-
+<!--Page Break--><br class="page-break-after" />
 function draw() {
   // Modifica la posición en un monto aleatorio pequeño
   x += random(-4, 4);
