--- a/book/spanish/content/ch10-objects.html
+++ b/book/spanish/content/ch10-objects.html
@@ -60,10 +60,10 @@ function display()</pre>
 <figcaption><b>Figura 10-1. </b>Pasar valores al constructor para que defina los valores de las propiedades de un objeto</figcaption>
 </figure>
 
-<p>El c&#xF3;digo dentro la funci&#xF3;n constructor es ejecutado una vez cuando el objeto es creado. Para crear la funci&#xF3;n constructor, seguiremos tres pasos:</p>
+<p class="pagebreak-before">El c&#xF3;digo dentro la funci&#xF3;n constructor es ejecutado una vez cuando el objeto es creado. Para crear la funci&#xF3;n constructor, seguiremos tres pasos:</p>
 
 
-<ol class="pagebreak-before">
+<ol>
 	<li>
 	<p>Crear un bloque de funci&#xF3;n.</p>
 	</li>
